# Tanit-bot

./: .gitignore  README.md  app.py  endpoints.py  labess-poc.py  main.py  pyproject.toml  rag.py
data/: security.txt
modal-code/: Labess-7b.py
