[project]
name = "elm-chatbot"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "huggingface-hub>=0.36.0",
    "modal>=1.3.2",
    "numpy>=2.4.1",
    "openai>=2.17.0",
    "packaging>=25.0",
    "torch>=2.10.0",
    "transformers>=4.57.6",
    "unsloth>=2024.8",
]
