[project]
name = "elm-chatbot"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.136.3",
    "huggingface-hub>=0.36.0",
    "langchain>=1.3.2",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.4",
    "langchain-huggingface>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "modal>=1.3.2",
    "numpy>=2.4.1",
    "openai>=2.17.0",
    "packaging>=25.0",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.5.1",
    "torch>=2.10.0",
    "transformers>=4.57.6",
    "unsloth>=2024.8",
    "uvicorn>=0.48.0",
]
